Add Mockito dependencies and refactor service usages
This commit introduces Mockito as a test dependency in both `accounts` and `products` modules. Additionally, it includes various refactors to improve the consistency and reliability of service usages across the codebase, specifically replacing some `S3FeignClient` usages with `socialService` and enhancing method documentation.